Connect login page with others

--- a/src/main/java/com/mycompany/course_recovery_plan/CourseRecovery.form
+++ b/src/main/java/com/mycompany/course_recovery_plan/CourseRecovery.form
@@ -76,7 +76,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="140" y="0" width="660" height="50"/>
+              <AbsoluteConstraints x="140" y="0" width="680" height="50"/>
             </Constraint>
           </Constraints>
 
@@ -89,7 +89,7 @@
                           <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="448" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
