--- a/src/main/java/com/mycompany/course_recovery_plan/CourseRecovery.form
+++ b/src/main/java/com/mycompany/course_recovery_plan/CourseRecovery.form
@@ -338,6 +338,9 @@
                       <Color id="Hand Cursor"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel6MouseClicked"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
